test/test-generatecode-erb.good
####COMMAND Only template
####CODE 0
####OUT
addition.keys

order

full_name_order

document.paths.keys
/test /present
template
<%=
out = []
out.push('addition.keys')
out.push($generator.addition.keys.join(' '))
out.push('order')
out.push($generator.order.join(' '))
out.push('full_name_order')
out.push($generator.full_name_order.join(' '))
out.push('document.paths.keys')
out.push($generator.document['paths'].keys.join(' '))
out.push('template')
out.push($generator.template)
begin
  out.push($generator.helper)
rescue NoMethodError
  out.push('Not extended.')
end
out.push($generator.addition.has_key?('add') ?  'Has add' : 'No add')
out.join("\n")
%>

Not extended.
No add
####ERR
####COMMAND JSON, YAML, text file, and Ruby extension
####CODE 0
####OUT
addition members
add: {"root"=>"json"}
add.txt: As is.
order
add.yaml add.json add.txt
full_name_order
{:filename=>"add.yaml", :contents=>{"root"=>"yaml"}} {:filename=>"add.json", :contents=>{"root"=>"json"}} {:filename=>"add.txt", :contents=>"As is."}
document.paths.keys
/test /present
add.yaml add.json add.txt
Has add
####ERR
####COMMAND Error in template
####CODE 6
####OUT
####ERR
Template syntax error: (erb):2: syntax error, unexpected ']', expecting ')'
out = []]
        ^
####COMMAND Error in extension
####CODE 4
####OUT
####ERR
Syntax error in addition error.rb: .../error.rb:2: syntax error, unexpected ')', expecting `end'
  @order.join(' '))
                  ^
####COMMAND Run-time error in extension
####CODE 7
####OUT
####ERR
Template error: undefined method `join' for nil:NilClass
